<resources>
    <!--app名-->
    <string name="app_name">Ling Demo App</string>

    <!--版號-->
    <string name="app_version_name" translatable="false">1.0.0</string>
    <string name="app_develop_name" translatable="false">R01</string>

    <!--系統基本字串-->
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="warn">注意</string>
    <string name="exit_app_message">您是否要關閉程式？</string>
    <string name="loading">讀取中...</string>
    <string name="no_data">查無資料</string>
    <string name="no_wifi">無網路連線</string>

    <!--Side menu-->
    <string name="menu_group_training">練習題</string>
    <string name="title_home">首頁</string>
    <string name="title_bingo">賓果遊戲</string>
    <string name="title_nbns">三大法人買賣超</string>
    <string name="menu_group_other">其他</string>
    <string name="title_setting">設定</string>

    <!--賓果-->
    <string name="bingo_please_input_range">請輸入數字範圍：</string>
    <string name="bingo_range_max">最大值</string>
    <string name="bingo_range_min">最小值</string>
    <string name="bingo_tilde" translatable="false">~</string>
    <string name="bingo_reset">重設</string>
    <string name="bingo_please_select_size">請選擇賓果大小：</string>
    <string name="bingo_current_mode">當前模式：</string>
    <string name="bingo_mode_input">輸入模式</string>
    <string name="bingo_mode_play">遊戲模式</string>
    <string name="bingo_please_input_num">請輸入賓果盤數字：</string>
    <string name="bingo_random">亂數</string>
    <string name="bingo_random_select">隨選</string>
    <string name="bingo_random_restart">重玩</string>
    <string name="bingo_plate_error">請輸入賓果盤數字！</string>
    <string name="bingo_plate_input_repeat_error">您已輸入過數字 %1$s ！</string>
    <string name="bingo_plate_repeat_error">賓果盤數字請勿重複輸入！</string>
    <string name="bingo_plate_range_error">賓果盤數字超過範圍！</string>
    <string name="bingo_range_error">請輸入數字範圍，最大值減最小值必需大於賓果盤範圍（%1$s）！</string>
    <string name="bingo_max_error">最大值請輸入 %1$s ~ %2$s 之間的任一數字！</string>
    <string name="bingo_min_error">最小值請輸入 %1$s ~ %2$s 之間的任一數字！</string>
    <string name="bingo_detail_text">數字範圍: %1$s ~ %2$s ; 賓果盤大小: %3$s</string>
    <string name="bingo_line">恭喜您！成功連線 %1$s 條。</string>
    <string name="bingo_size_3" translatable="false">3 x 3</string>
    <string name="bingo_size_4" translatable="false">4 x 4</string>
    <string name="bingo_size_5" translatable="false">5 x 5</string>
    <string name="bingo_size_6" translatable="false">6 x 6</string>
    <string name="bingo_size_7" translatable="false">7 x 7</string>
    <string-array name="bingo_size_list" translatable="false">
        <item>@string/bingo_size_3</item>
        <item>@string/bingo_size_4</item>
        <item>@string/bingo_size_5</item>
        <item>@string/bingo_size_6</item>
        <item>@string/bingo_size_7</item>
    </string-array>
    <string name="bingo_info_title" translatable="false">訓練題目-賓果遊戲</string>
    <string name="bingo_info" translatable="false">
題目要求：\n
● 賓果盤大小及數字範圍皆可自選。\n
● 需有開關功能切換遊戲或輸入模式。\n
● 輸入模式下可手動輸入各方格的數字。\n
● 另提供按鈕，可亂數決定所有方格的數字。\n
● 遊戲模式下不能修改賓果盤數字。\n
● 賓果盤數字於按下時需能改顏色，再次按下時復原。\n
● 數字不得重覆，手動輸入時如有重覆則需無法輸入或警示。\n\n
評分標準：\n
● 功能性需求是否實作完成。\n
● 非功能性需求是否實作完成。\n
● 成果報告過程中是否有當機及效能不佳的問題。\n
● 是否有遵守Coding Standard。\n
● 物件的使用是否合乎標準。\n
● 考慮多國語，使用字串檔。\n\n
加分：\n
● UI是否美觀及User Friendly。\n
● 是否有實作題目以外的功能。\n
● 是否考慮不同解析度。\n
● 是否考慮不同作業系統版本。\n</string>

    <!--三大法人-->
    <string name="nbns_qfii">外資</string>
    <string name="nbns_brk">自營</string>
    <string name="nbns_it">投信</string>
    <string name="nbns_tes">上市</string>
    <string name="nbns_otc">上櫃</string>
    <string name="nbns_date">日期</string>
    <string name="nbns_total">合計</string>
    <string name="nbns_day" translatable="false">日</string>
    <string name="nbns_hundred_million" translatable="false">億</string>
    <string name="nbns_tes_api" translatable="false">http://iwow.systex.com.tw/webService/ThreeCommOverBS_TSE.ashx</string>
    <string name="nbns_otc_api" translatable="false">http://iwow.systex.com.tw/webService/ThreeCommOverBS_OTC.ashx</string>
    <string name="nbns_info_title" translatable="false">訓練題目-三大法人買賣超走勢圖</string>
    <string name="nbns_info" translatable="false">
訓練內容：\n
1. WebService：Activity 及 WebService 做資料串連。\n
 (從 WebService 取得三大法人的買賣超資料，需以 AsyncTask 向 WebService 取資料)\n
2. SurfaceView 的使用。\n
3. ListView 的使用。\n
 (以 ListView 配上 BaseAdapter 來顯示三大法人買賣超)\n\n
題目說明：\n
1. 畫面\n
 ● 以 SurfaceView 呈現三大法人買賣超柱狀圖。\n
 ● 以 ListView 呈現三大法買賣超資料。\n
 ● 上市、上櫃按鈕必須可以切換，切換後畫面資料亦要隨上市、上櫃的類型而重新改變。\n
2. SurfaceView\n
 ● 若是三大法人合計買賣超為正值，柱狀圖的顏色為 (27, 151, 250)；若是三大法人數值為負值，柱狀圖的顏色為 (10, 77, 126)。\n
 ● X 軸為日期， Y 軸為買賣超數值，單位為「億」，「億」必需在最大數值的下方呈現。且 Y 軸正負要各顯示4個數值。\n
 ● 最新的交易日的背景色為黑色，其餘交易日的背景色為灰色 (57, 57, 57)，每個交易日中間必須間隔 10px。\n
 ● 需在圖上以小圓圈代表三大法人買賣超的數值，紅色(255, 0, 0)代表外資買賣超數值、橘色 (252, 164, 41) 代表自營買賣超數值、綠色(0, 255, 0 )代表投信買賣超數值，點要連成一直線。\n
3. ListView\n
 ● ListView 的表頭為灰色 (196, 196, 196)， 需顯示的欄位為日期、外資、投信、自營、合計。\n
 ● 若數值為負值，則顯示綠色 (37, 197, 57)，若為正值，則顯示紅色 (192, 38, 37)。\n
 ● 最新的交易日的背景色為黑色，偶數列的背景色為 (45, 45, 45)，基數列的背景色為 (32, 32, 32)。\n\n
 ● ListView 的分隔線的顏色為 (59, 59, 59)。\n\n
資料來源：\n
 ● 三大法人上市買賣金額：\n
 http://iwow.systex.com.tw/webService/ThreeCommOverBS_TSE.ashx \n
 ● 三大法人上櫃買賣金額：\n
 http://iwow.systex.com.tw/webService/ThreeCommOverBS_OTC.ashx \n\n
評分標準：\n
● 功能性需求是否實作完成。\n
● 非功能性需求是否實作完成。\n
● 是否有遵守Coding Standard。\n
● 物件的使用是否合乎標準。\n
● 成果報告過程中是否有當機或無窮迴圈狀況。\n
● 程式效能。\n
● 考慮不同解析度顯示。\n\n
加分：\n
● UI是否美觀及User Friendly。\n
● 是否有實作題目以外的功能。\n
● 元件是否為自行開發。\n</string>

    <!--設定-->
    <string name="setting_language">語系設定</string>
    <string name="setting_version">系統版本</string>
    <string name="setting_language_tw" translatable="false">繁體中文</string>
    <string name="setting_language_cn" translatable="false">简体中文</string>
    <string name="setting_language_en" translatable="false">English</string>
    <string name="setting_language_jp" translatable="false">日本語</string>
    <string-array name="setting_language_list" translatable="false">
        <item>@string/setting_language_tw</item>
        <item>@string/setting_language_cn</item>
        <item>@string/setting_language_en</item>
        <item>@string/setting_language_jp</item>
    </string-array>

    <!--其他-->
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings" translatable="false">Settings</string>

</resources>
