<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_bingo_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ling.testapp.ui.navigation.LNavigationBar
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="180px" />

    <LinearLayout
        android:id="@+id/ll_bingo_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_bingo_size"
            android:layout_width="match_parent"
            android:layout_height="101px"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_select_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60px"
                android:maxLines="1"
                android:text="@string/bingo_please_select_size"
                android:textColor="@android:color/black"
                android:textSize="48px" />

            <EditText
                android:id="@+id/et_size"
                android:layout_width="400px"
                android:layout_height="85px"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:maxLines="1"
                android:paddingBottom="5px"
                android:layout_marginRight="60px"
                android:paddingTop="0px"
                android:text="@string/bingo_size_3"
                android:textColor="@color/black_80"
                android:textSize="48px" />

            <View
                android:id="@+id/v_line_1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/black_50" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_range"
            android:layout_width="match_parent"
            android:layout_height="101px"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_input_range"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60px"
                android:maxLines="1"
                android:text="@string/bingo_please_input_range"
                android:textColor="@android:color/black"
                android:textSize="48px" />

            <EditText
                android:id="@+id/et_min"
                android:layout_width="180px"
                android:layout_height="85px"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_tilde"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/bingo_range_min"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_max"
                android:paddingBottom="5px"
                android:paddingTop="0px"
                android:textColor="@color/black_80"
                android:textColorHint="@color/black_50"
                android:textSize="48px" />

            <TextView
                android:id="@+id/tv_tilde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30px"
                android:layout_toLeftOf="@+id/et_max"
                android:maxLines="1"
                android:text="@string/bingo_tilde"
                android:textColor="@android:color/black"
                android:textSize="48px" />

            <EditText
                android:id="@+id/et_max"
                android:layout_width="180px"
                android:layout_height="85px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30px"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60px"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:hint="@string/bingo_range_max"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:paddingBottom="5px"
                android:paddingTop="0px"
                android:textColor="@color/black_80"
                android:textColorHint="@color/black_50"
                android:textSize="48px" />

            <View
                android:id="@+id/v_line_2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@color/black_50" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_mode"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:gravity="center_vertical">

            <ling.testapp.ui.view.LSwitchButton
                android:id="@+id/switch_button"
                android:layout_width="140px"
                android:layout_height="70px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="15px"
                android:layout_marginRight="60px"
                slideswitch:shape="circle"
                slideswitch:themeColor="@color/pink" />

            <TextView
                android:id="@+id/tv_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignTop="@+id/switch_button"
                android:layout_centerVertical="true"
                android:layout_marginRight="30px"
                android:layout_toLeftOf="@+id/switch_button"
                android:maxLines="1"
                android:text="@string/bingo_mode_input"
                android:textColor="@color/black_80"
                android:textSize="48px" />

            <TextView
                android:id="@+id/tv_current_mode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="60px"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/bingo_current_mode"
                android:textColor="@android:color/black"
                android:textSize="48px"
                android:layout_alignTop="@+id/tv_mode"
                android:layout_alignParentStart="true"
                android:layout_marginStart="24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_bingo_plate"
            android:layout_width="match_parent"
            android:layout_height="101px"
            android:gravity="center_vertical">

            <View
                android:id="@+id/v_line_3"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentTop="true"
                android:background="@color/black_50" />

            <TextView
                android:id="@+id/tv_please_input_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60px"
                android:maxLines="1"
                android:text="@string/bingo_please_input_num"
                android:textColor="@android:color/black"
                android:textSize="48px" />

            <Button
                android:id="@+id/btn_clear_bingo"
                android:layout_width="150px"
                android:layout_height="80px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="60px"
                android:background="@drawable/bg_btn_pink"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5px"
                android:text="@string/bingo_reset"
                android:textColor="@android:color/white"
                android:textSize="48px" />

            <Button
                android:id="@+id/btn_random"
                android:layout_width="150px"
                android:layout_height="80px"
                android:layout_centerVertical="true"
                android:layout_marginRight="30px"
                android:layout_toLeftOf="@+id/btn_clear_bingo"
                android:background="@drawable/bg_btn_pink"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5px"
                android:text="@string/bingo_random"
                android:textColor="@android:color/white"
                android:textSize="48px" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_bingo_background"
            android:gravity="center">

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/rl_line"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_line"
                android:layout_width="780px"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60px"
                android:textColor="@android:color/black"
                android:textSize="48px" />

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="150px"
                android:layout_height="80px"
                android:layout_centerVertical="true"
                android:layout_marginRight="30px"
                android:layout_toLeftOf="@+id/btn_select"
                android:background="@drawable/bg_btn_pink"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5px"
                android:text="@string/bingo_random_restart"
                android:textColor="@android:color/white"
                android:textSize="48px" />

            <Button
                android:id="@+id/btn_select"
                android:layout_width="150px"
                android:layout_height="80px"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="60px"
                android:background="@drawable/bg_btn_pink"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="5px"
                android:text="@string/bingo_random_select"
                android:textColor="@android:color/white"
                android:textSize="48px" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
