<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_setting_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_setting"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <View
        android:id="@+id/v_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_20" />

    <RelativeLayout
        android:id="@+id/rl_language"
        android:layout_width="match_parent"
        android:layout_height="380px"
        android:background="@drawable/bg_transparent_press_black20"
        android:clickable="true"
        android:paddingLeft="30px"
        android:paddingRight="10px"
        android:paddingTop="180px"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/ll_language_text"
            android:layout_width="wrap_content"
            android:layout_height="200px"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30px"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/black_15"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="4"
                android:text="@string/setting_language"
                android:textColor="@android:color/white"
                android:textSize="54px" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="@color/black_15"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="4"
                android:layout_marginTop="20px"
                android:text="@string/setting_language_tw"
                android:textColor="@android:color/white"
                android:textSize="36px" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_language_shadow"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_alignParentRight="true"
            android:layout_marginTop="27px"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:alpha="0.8"
            android:src="@drawable/ic_gray_right_arrow" />

        <ImageButton
            android:id="@+id/ibtn_language"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2px"
            android:layout_marginTop="25px"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_right_arrow" />
    </RelativeLayout>

    <View
        android:id="@+id/v_line_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rl_language"
        android:background="@color/white_50" />

    <RelativeLayout
        android:id="@+id/rl_version"
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_below="@+id/v_line_1"
        android:gravity="center_vertical"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:id="@+id/tv_title_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:gravity="center"
            android:shadowColor="@color/black_15"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/setting_version"
            android:textColor="@android:color/white"
            android:textSize="54px" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_version"
            android:layout_marginLeft="30px"
            android:layout_marginTop="20px"
            android:gravity="center"
            android:shadowColor="@color/black_15"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/app_version_name"
            android:textColor="@android:color/white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/tv_develop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_version"
            android:layout_marginLeft="20px"
            android:layout_marginTop="20px"
            android:layout_toRightOf="@+id/tv_version"
            android:gravity="center"
            android:shadowColor="@color/black_15"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="4"
            android:text="@string/app_develop_name"
            android:textColor="@android:color/white"
            android:textSize="36px" />
    </RelativeLayout>

    <View
        android:id="@+id/v_line_2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/rl_version"
        android:background="@color/white_50" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black_15"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="30px"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="54px" />

    <!--引導欄需於最上層-->
    <ling.testapp.ui.navigation.LNavigationBar
        android:id="@+id/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="180px" />

</RelativeLayout>
